--- a/Moduo1/HiringCompanyTest/HiringCompanyTest.csproj
+++ b/Moduo1/HiringCompanyTest/HiringCompanyTest.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +64,7 @@
     <Compile Include="DatabaseAccessTest\InternalDatabaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmployeeServiceTest.cs" />
+    <Compile Include="Services\HiringServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -70,6 +72,10 @@
     <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\ICommon\ICommon.csproj">
+      <Project>{32fb816c-6a52-4ec3-a6ef-d577e56a9e2c}</Project>
+      <Name>ICommon</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EmployeeCommon\EmployeeCommon.csproj">
       <Project>{f52c7068-8a38-4d65-a13c-4ff1453f6b83}</Project>
       <Name>EmployeeCommon</Name>
